テキストデータを JSON ファイルから読み込むようにした